--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -10,5 +10,6 @@
     <string name="result">결과</string>
     <string name="title_activity_intro">Intro</string>
     <string name="kakaostory">카카오스토리</string>
-    
+    <string name="facebook">페이스북</string>
+    <string name="loading">Loading</string>
 </resources>
