--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="facebook">페이스북</string>
     <string name="loading">Loading</string>
     <string name="your_soulmate_is">당신의 Soulmate는..</string>
+    <string name="share_result">결과 공유하기</string>
 </resources>
