--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
-    <string name="app_name">Android</string>
+    <string name="app_name">내 소울메이트는?</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_result">ResultActivity</string>
     <string name="retry">다시</string>
@@ -10,6 +9,7 @@
     <string name="kakaostory">카카오스토리</string>
     <string name="facebook">페이스북</string>
     <string name="loading">Loading</string>
-    <string name="your_soulmate_is">당신의 Soulmate는..</string>
+    <string name="your_soulmate_is">당신의 소울메이트는..</string>
     <string name="share_result">결과 공유하기</string>
+    <string name="x">X</string>
 </resources>
