android - 종료 다이얼로그 추가, app icon 수정

--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="your_soulmate_is">당신의 소울메이트는..</string>
     <string name="share_result">결과 공유하기</string>
     <string name="x">X</string>
+    <string name="exit">종료</string>
+    <string name="cancel">취소</string>
 </resources>
