android - app_name 변경

--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">전생 알아보기</string>
+    <string name="app_name">재미로보는 전생</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_result">ResultActivity</string>
     <string name="retry">다시</string>
